--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
+    <h2>Clear Canvass</h2>
+    <input type="button" id="clearCanvas">
+
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
 
