--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
     </script>
 </head>
@@ -18,21 +16,31 @@
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="1">
-        Grid Width:
+        <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
         <input type="number" id="inputWidth" name="width" min="1" value="1">
         <input type="submit">
     </form>
 
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
+    <form>
+        <fieldset id='mode'>
+            <h2>Mode</h2>
+            <input type='button' id='paintBttn'>Paint</input>
+            <input type='button' id='eraseBttn'>Erase</input>
 
-    <h2>Clear Canvass</h2>
-    <input type="button" id="clearCanvas">
+            <label for="colorPicker">Pick A Color
+                <input type="color" id="colorPicker">
+            </label>
+
+            <label for="clearCanvas">Clear Canvass
+                <input type="button" id="clearCanvas">
+            </label>
+        </fieldset>
+    </form>
 
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
 
     <script src="designs.js"></script>
 </body>
+
 </html>
