--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </fieldset>
       <button type="button " id="clearCanvas" value="Clear" tabindex="6">Clear Canvass</button>
       <label for="colorPicker ">Pick A Color
-        <input type="color" id="colorPicker" value="purple">
+        <input type="color" id="colorPicker" value="#000000">
       </label>
     </form>
   </section>
@@ -47,7 +47,7 @@
 
   </table>
 
-  <script src="designs.js"></script>
+  <script src="designv2.js"></script>
 </body>
 
 </html>
