--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
         <button type='button' id='paintBttn' value="Paint" tabindex="3">Paint</button>
         <button type='button' id='eraseBttn' value="Erase" tabindex="4">Erase</button>
       </fieldset>
-      <button type="button " id="clearCanvas" value="Clear" tabindex="6">Clear Canvass</button>
-      <label for="colorPicker ">Pick A Color
-        <input type="color" id="colorPicker" value="purple">
-      </label>
+      <fieldset>
+        <legend>Color</legend>
+        <label for="colorPicker ">Pick A Color
+          <input type="color" id="colorPicker" value="purple">
+        </label>
+      </fieldset>
+      <fieldset>
+        <legnend>Clear Canvas</legnend>
+        <button type="button " id="clearCanvas" value="Clear" tabindex="6">Clear</button>
+      </fieldset>
     </form>
   </section>
 
