A couple of small html changes and filename changes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
   <title>Pixel Art Maker!</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="pixelartmaker.css">
   </script>
 </head>
 
@@ -53,7 +51,7 @@
 
   </table>
 
-  <script src="designs.js"></script>
+  <script src="pixelartmaker.js"></script>
 </body>
 
 </html>
