Small changes to JS trying to get grid reset to work

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <legend>Grid Size</legend>
         <label for="inputHeight">
           Height:
-          <input type="number" id="inputHeight" name="height" min="1" max="999" maxlength="3" step="1" value="50" accesskey="H" tabindex="0">
+          <input type="number" id="inputHeight" name="height" min="1" max="999" maxlength="3" step="1" value="10" accesskey="H" tabindex="0">
         </label>
         <label for="inputWidth">
           Width:
-          <input type="number" id="inputWidth" name="width" min="1" max="999" maxlength="3" step="1" value="50" accesskey="W" tabindex="1">
+          <input type="number" id="inputWidth" name="width" min="1" max="999" maxlength="3" step="1" value="10" accesskey="W" tabindex="1">
         </label>
         <button type="button" id="sizePickerSubmit" tabindex="2">Submit</button>
       </fieldset>
@@ -40,7 +40,7 @@
         </label>
       </fieldset>
       <fieldset>
-        <legnend>Clear Canvas</legnend>
+        <legend>Clear Canvas</legend>
         <button type="button " id="clearCanvas" value="Clear" tabindex="6">Clear</button>
       </fieldset>
     </form>
