Added draw on mouseover

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <fieldset>
         <legend>Color</legend>
         <label for="colorPicker ">Pick A Color
-          <input type="color" id="colorPicker" value="purple">
+          <input type="color" id="colorPicker" value="#000000">
         </label>
       </fieldset>
       <fieldset>
