--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <header>
     <h1>Pixel Art Maker</h1>
   </header>
-  <div class="">
-    <section class="l-box">
+  <div class="pure-g">
+    <section id="controls" class="l-box pure-u-1">
       <form class="pure-form pure-g">
         <fieldset class="pure-u-2-5">
           <legend>Grid Size</legend>
@@ -50,7 +50,7 @@
       </form>
     </section>
 
-    <section id="canvasSec" class="l-box">
+    <section id="canvasSec" class="l-box pure-u-1">
       <h2>Design Canvas</h2>
       <table id="pixelCanvas">
         <tr>
