Trying to get the image to upload, don't know why it didn't before

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="spacer1"></div>
+
+  <div class="wrap">
+
     <header>
       <h1>Pixel Art Maker</h1>
     </header>
-    <div class="pure-g">
+
+    <div class="innerWrap">
+
       <section id="controls" class="l-box pure-u-1">
         <form class="pure-form pure-g">
           <fieldset class="pure-u-2-5">
@@ -513,8 +518,15 @@
 
         </table>
       </section>
+
     </div>
+
+    <footer></footer>
+
   </div>
+
+  <div class="spacer2"></div>
+
   <script src="pixelartmaker.js"></script>
 </body>
 
